Update GC.md